tests/baselines/reference/parserComputedPropertyName20.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts(2,5): error TS1169: Computed property names are not allowed in interfaces.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName20.ts (2 errors) ====
    interface I {
        [e](): number 
        ~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
        ~~~
!!! error TS9002: Computed property names are not currently supported.
    }